AC_INIT(src/sockets.ads)
AM_CONFIG_HEADER(src/config.h)
AC_CONFIG_AUX_DIR(../support)
#
# Package description
#
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([adasockets],[0.1.7-pre])
#
AC_CHECK_PROGS(AWK, [gnuawk gawk awk])
AC_PROG_CC
AC_OBJEXT
AC_EXEEXT
AC_PROG_MAKE_SET
AC_PROG_INSTALL
#
# Check for maintainer mode
#
AC_ARG_ENABLE(debug,
[  --enable-debug          Turn on debugging options],
[ADAFLAGS="-g -O2 -Wall -gnaty3bcefhikmt -gnatfaog -gnatwu -gnatwe"],
[ADAFLAGS="-g -O2"])
AC_SUBST(ADAFLAGS)
#
# Check that GNAT is recent enough
#
AM_ADA_PREREQ(970814, 3.10)
AC_CHECK_PROG(GNATMAKE, gnatmake, gnatmake)
#
# Test for -lnsl and -lsocket
#
AC_CHECK_FUNC(gethostbyname,NSLNEEDED="--  ",
  AC_CHECK_LIB(nsl,gethostbyname,,NSLNEEDED="--  "))
AC_SUBST(NSLNEEDED)
AC_CHECK_FUNC(connect,SOCKETNEEDED="--  ",
  AC_CHECK_LIB(socket,connect,,SOCKETNEEDED="--  "))
AC_SUBST(SOCKETNEEDED)
#
# Extra libraries
#
AC_ARG_WITH(extra-libs,
 [  --with-extra-libs=libs  Add extra libraries when building a program],
 [EXTRA_LIBS="${withval}"])
AC_SUBST(EXTRA_LIBS)
#
# Header files
#
AC_CHECK_HEADERS([stdio.h sys/types.h sys/socket.h errno.h netdb.h])
AC_CHECK_HEADERS([netinet/in.h signal.h fcntl.h termio.h termios.h sys/file.h])
AC_CHECK_HEADERS([sys/ioctl.h netinet/tcp.h sys/systeminfo.h poll.h stropts.h])
AC_CHECK_HEADERS([sys/conf.h])
#
# Output
#
AC_OUTPUT([Makefile
           src/Makefile
           src/sockets-link.ads
           src/adasockets-config])
